<resources>
    <string name="DIALOG_OK">OK</string>
    <string name="DIALOG_CANCEL">Cancel</string>
    <string name="app_name">LPG Booking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_lpgconnection">AddLPGConnection</string>
    <string name="add_agency">Agency</string>
    <string name="add_Connection_Name">Connection Name</string>
    <string name="Provider">Provider</string>
    <string name="add_AgencyPhone">Agency Phone</string>
    <string name="add_LastBooked">Last Booked</string>
    <string name="add_ExpectedExpiry">Expected Expiry</string>
    <string name="hint">This is a hint</string>
    <string name="NoConnection_Cylinder_name">No Connections Found</string>
    <string name="NoConnetion_Cylider_Company">You can add your LPG connection now!!</string>
    <string name="NoConnection_CylinderExpiry">Just click on Add button below</string>
    <string name="Add_connection_activity_title">Add Connection</string>
    <string name="Add_Connection_Name">Connection Name</string>
    <string name="Hint_Connection_Name">Enter Connection Name</string>
    <string name="Add_Provider">Provider</string>
    <string name="Hint_Provider">Enter Provider Name</string>
    <string name="Agency">Agency</string>
    <string name="Phone_No">Phone Number</string>
    <string name="Add_Agency">Agency Name</string>
    <string name="Hint_Agency_Name">Enter Agency Name</string>
    <string name="Hint_Agency">Enter Distributor Phone number</string>
    <string name="Add_Agency_Phone">Agency IVRS number</string>
    <string name="Hint_Agency_Phone">Enter Agency IVRS Phone no</string>
    <string name="Hint_sms_no">Enter no for SMS booking</string>
    <string name="Add_Connection_id">Enter Consumer Number</string>
    <string name="Add_Expiry_days">Enter best-guess expiry time in days</string>
    <string name="Add_Last_Booked_Date">Enter Last Booked Date</string>
    <string name="Calendar_Accessibility_message">Click on this image to select latest booked date for your LPG connection</string>
    <string name="btn_Submit">Submit</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="Notification_MidWayAlarm">is half done. Click to book your cylinder</string>
    <string name="Add_Connection_User_Prompt_AddMode">You can add a new LPG connection details here. </string>
    <string name="Add.Connection.User.Instructions">You will get your Agency phone number details from your LPG provider\'s website, please refer to FAQs section in Home screen menu. \nYou will find your connecton id in your LPG connection invoice or your LPG connection document.\nPlease provide correct details to help in easy re-fill.</string>
    <string name="Add_Connection_User_Prompt_EditMode">You can edit your LPG Booking details below.</string>
    <string name="Add_LPGBooking_AddMode_Title">Add Connection</string>
    <string name="Add_LPGBooking_EditMode_Title">Edit Connection</string>
    <string name="Add_Connection_User_Prompt">Please add a new cylinder connection </string>
    <string name="toast_delete_successful">LPG connection deleted successfully</string>
    <string name="toast_delete_failure">Deletion Failure:Please try later</string>
    <string name="lpgbooking_title">Book LPG Connection</string>
    <string name="lpgbooking_activity_description">You can book for your lpg cylinder refill through call or sms option.</string>
    <string name="lpgbooking_connection_name">Connection Name</string>
    <string name="lpgbooking_connection_provider">Connection Provider</string>
    <string name="lpgbooking_expected_expiry_Dte">Expected Expiry Date</string>
    <string name="lpgbooking_callpermissiondialog_title">Permission Denied</string>
    <string name="lpgbooking_permissioncancellation_request">Sure!! You can book re-fill offline by your choice, and provide last booked date in Edit Connections screen from Home page </string>
    <string name="dialogDBQueryFailed">There seems to be an issue with your connection details. Please try again later or create a new connection</string>
    <string name="lpgbooking_smsnotification">SMS booking facility available only for Indane(IOCL), Bharath Gas(BPCL) and HP Gas(HP Gas). </string>
    <string name="lpgbooking_smsnotificationsuccess">SMS sent. Please check with distributor for successful booking and change last booked date accordingly.</string>
    <string name="confirmbooking_label">Confirm your booking</string>
    <string name="confirmlpgbooking_description">Hope you had booked your cylinder. Shall we start tracking it then?\n\n Click on No if you have not booked, and you can try again later.\n</string>
    <string name="confirmbooking_button_yes">YES</string>
    <string name="confirmbooking_button_no">NO</string>
    <string name="confirmbooking_updatefailure">Unable to update, please edit last booking date in Edit Connection Page</string>
    <string name="confirmbooking_cursorfetchfailure">Unable to retrieve DB, please edit last booking date in Edit Connection Page</string>
    <string name="confirmbooking_alarm_notificationtitle_yes">Time to book your cylinder!!</string>
    <string name="confirmbooking_success">Great!! We have successfully started tracking your new booking. We will keep you updated about time to book refill for this cylinder!!</string>
    <string name="confirmbooking_failure">Never mind!! We will inform you to book this cylinder again in a day\'s time</string>
    <string name="confirmbooking_failure_notificationmessage">could not be booked in your last attempt. You can try booking it now!!!</string>
    <string name="permission_intimation_user_for_sms">Well, you would need to provide permission to us to send and read text messages. Currently, this is not provided. Please let us know if you can provide the access now. Standard call rates / sms tariff would be applicable for appropriate usage from the app. </string>
    <string name="permission_intimation_user_for_call">Well, you would need to provide permission to us to call your cooking gas agency. Currently, this is not provided. Please let us know if you can provide the access now. Standard call rates / sms tariff would be applicable for appropriate usage from the app. </string>
    <string name="permission_revocation_intimation">You can revoke the permission anytime from Settings</string>
    <string name="permission_button_cancel">Cancel</string>
    <string name="permission_button_ok">OK</string>
    <string name="permission_toast_callpermission_denied">Phone call permission denied</string>
    <string name="permission_toast_sms_denied">SMS permission denied</string>
    <string name="progress_loader_text">Loading...</string>
    <string name="connection.detail.missing">Connection not found</string>
    <string name="addlpg_connection_not_found">Not Found</string>
    <string-array name="navigation_menuitems">
        <item>LPG Booking</item>
        <item>Home</item>
        <item>Add LPG Connection</item>
        <item>Phone booking registration</item>
        <item>SMS booking registration</item>
        <item>FAQs</item>
        <item>Tell a Friend</item>
        <item>Contact Us</item>
        <item>Privacy Policy</item>
    </string-array>
    <string name="tellafriend_desc">This LPG booking app is going to help you a lot. You can try!!!</string>
    <string name="tellafriend_with">Share with your Friend through</string>
    <string name="contactus_URL">https://lpgbookingapp.wordpress.com/contact/</string>
    <string name="privacypolicy_URL">https://lpgbookingapp.wordpress.com/privacy-policy/</string>
    <string name="notification_app_transcend">You will be moved out of app to browser</string>
    <string name="navdrawer_open">Drawer Open</string>
    <string name="navdrawer_close">Drawer Close</string>
    <string name="phonebooking_activity_title">Phone Booking Registration</string>
    <string name="registration_desc">You need to register your mobile number to refill via phone booking or SMS booking option.\n\nPlease select your connection.</string>
    <string name="reg_button">CALL TO REGISTER</string>
    <string-array name="no_connections">
        <item>Please add cylinder connection</item>
    </string-array>
    <string name="selectconnection">Select Connection</string>
    <string name="registation_phonebooking_null_number">Please enter a valid number to call</string>
    <string name="registation_smsbooking_null_number">Please enter a valid number to text</string>
    <string name="registration_noconnection">You have not added any connection yet. Please add a new connection.</string>
    <string name="registration_hint_provider">LPG Provider</string>
    <string name="registration_hint_agency">LPG Agency name</string>
    <string name="registration_hint_distributornumber">LPG Agency Landline number</string>
    <string name="registration_phone_button_name">Call to Register</string>
    <string name="registration_phonebooking_hint_regno">Validate Phone booking registration number</string>
    <string name="registration_smsbooking_hint_regno">Validate SMS booking registration number</string>
    <string name="registration_error_phonenumber">Please enter valid phone number</string>
    <string name="registration_notification_sms">Please reach out your distributor for registering your mobile number with this consumer id. Mobile based registration is not available for this LPG provider.</string>
    <string name="smsbooking_activity_title">SMS Booking Registration</string>
    <string name="smsbooking_smssent">SMS Registration message sent</string>
    <string name="smsbooking_buttonname">Send Registration Message</string>
    <string name="reg_notification_pristine">Please select your provider and click on button below</string>
    <string name="reg_notification_sms_error">SMS registration not available for this provider</string>
    <string name="reg_notification_text_color">#343435</string>
    <string name="reg_notificiation_text_color_red">#ed0e3a</string>
    <string name="FAQs_title">FAQs</string>
    <string-array name="Questions">
        <item>What are the LPG providers supported by this app?</item>
        <item>How do I get phone numbers for my agency?</item>
        <item>What is the prerequisite to book my refill using phone booking / sms booking?</item>
        <item>What is registration of my mobile number for refill booking? Why is it necessary</item>
        <item>How to register my mobile number for phone booking/sms booking?</item>
        <item>What are pitfalls in SMS booking?</item>

    </string-array>
    <string name="purchase_notification">You will be able to add more connections by registering as a premium user. Please buy premium version to add unlimited connections and ad-free experience.\nPlease ensure that you are connected to a network to purchase. </string>
    <string name="billing_sku_default">Please ensure that you are connected to a network to purchase.</string>
</resources>