<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.v7.appCompat="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/lpgbooking_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/lpgbooking_margin"

        android:paddingLeft="@dimen/lpgbooking_padding_left"
        android:paddingStart="@dimen/lpgbooking_padding_left"
        android:paddingTop="@dimen/lpgbooking_padding_top"
        android:text="@string/lpgbooking_activity_description"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/lpgbooking_description_fontsize" />

    <!--Display connnection name and agency name-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lpgbooking_connectionname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lpgbooking_description"
        android:layout_margin="@dimen/lpgbooking_margin"
        android:paddingLeft="@dimen/lpgbooking_padding_left"
        android:paddingStart="@dimen/lpgbooking_padding_left"
        android:paddingTop="@dimen/lpgbooking_padding_insideview"
        android.support.v7.appCompat:hintAnimationEnabled="true"

        >

        <EditText
            android:id="@+id/lpgbooking_connectionname_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lpgbooking_connection_name"
            android:text="This is a sample connection name"

            />

    </android.support.design.widget.TextInputLayout>

    <!--Connection provider textinputlayout-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lpgbooking_connection_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lpgbooking_connectionname"
        android:layout_margin="@dimen/lpgbooking_margin"
        android:paddingLeft="@dimen/lpgbooking_padding_left"
        android:paddingStart="@dimen/lpgbooking_padding_left"
        android:paddingTop="@dimen/lpgbooking_padding_insideview"
        android.support.v7.appCompat:hintAnimationEnabled="true">

        <EditText
            android:id="@+id/lpgbooking_provider_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lpgbooking_connection_provider"
            android:text="This is a sample connection name"

            />

    </android.support.design.widget.TextInputLayout>

    <!--Expected expiry date-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/lpgbooking_expected_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lpgbooking_connection_provider"
        android:layout_margin="@dimen/lpgbooking_margin"
        android:paddingLeft="@dimen/lpgbooking_padding_left"
        android:paddingStart="@dimen/lpgbooking_padding_left"
        android:paddingTop="@dimen/lpgbooking_padding_insideview"
        android.support.v7.appCompat:hintAnimationEnabled="true">

        <EditText
            android:id="@+id/lpgbooking_expected_expiry_date_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lpgbooking_expected_expiry_Dte"
            android:text="This is a sample connection name"

            />

    </android.support.design.widget.TextInputLayout>

    <!--Text view to show error messages for SMS or Phone booking. -->
    <TextView
        android:id="@+id/lpgbooking_smsnotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lpgbooking_expected_expiry_date"
        android:layout_marginLeft="@dimen/lpgbooking_margin"
        android:layout_marginRight="@dimen/lpgbooking_margin"
        android:paddingEnd="@dimen/lpgbooking_smsnotification_paddingleft"
        android:paddingLeft="@dimen/lpgbooking_smsnotification_paddingleft"
        android:paddingRight="@dimen/lpgbooking_smsnotification_paddingleft"
        android:paddingStart="@dimen/lpgbooking_smsnotification_paddingleft"
        android:paddingTop="@dimen/lpgbooking_smsnotification_paddingtop"
        android:text="@string/lpgbooking_smsnotification"
        android:visibility="visible" />

    <!--Relative layout for image icons-->
    <LinearLayout
        android:id="@+id/lpgbooking_bookingtoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lpgbooking_smsnotification"
        android:layout_margin="@dimen/lpgbooking_margin_imagelayout"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/lpgbooking_call_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="@dimen/lpgbooking_margin_bottom_image"

            android:layout_marginEnd="@dimen/lpgbooking_margin_right_image"
            android:layout_marginLeft="@dimen/lpgbooking_margin_start_image"
            android:layout_marginRight="@dimen/lpgbooking_margin_right_image"

            android:layout_marginTop="16dp"
            android:background="@drawable/ic_call_black_36dp_2"
            android:paddingTop="@dimen/lpgbooking_padding_top" />

        <ImageView
            android:id="@+id/lpgbooking_sms_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="@dimen/lpgbooking_margin_bottom_image"
            android:layout_marginEnd="@dimen/lpgbooking_margin_right_image"
            android:layout_marginLeft="@dimen/lpgbooking_margin_left_image"
            android:layout_marginRight="@dimen/lpgbooking_margin_right_image"
            android:layout_marginStart="@dimen/lpgbooking_margin_left_image"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_message_green"
            android:paddingTop="@dimen/lpgbooking_padding_top" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressloader"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lpgbooking_bookingtoolbar"
        android:layout_marginTop="@dimen/loader_layout_topmargin"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">


        <ProgressBar
            android:layout_width="@dimen/loaderdimension"
            android:layout_height="@dimen/loaderdimension"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/progresstext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/loadertextleftmargin"
            android:gravity="center_vertical"
            android:text="@string/progress_loader_text" />

    </LinearLayout>
</RelativeLayout>