<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/confirmbooking_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/confirmbooking_description_leftpadding"
            android:paddingStart="@dimen/confirmbooking_description_leftpadding"
            android:paddingRight="@dimen/confirmbooking_description_leftpadding"
            android:paddingEnd="@dimen/confirmbooking_description_leftpadding"
            android:gravity="center_horizontal"
            android:textSize="@dimen/confirmbooking_description_fontsize"

            android:text="@string/confirmlpgbooking_description"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/confirmbooking_description_textview"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
             <Button
                android:id="@+id/confirmbooking_yes"
                android:layout_width="@dimen/confirmbooking_button_width"
                android:layout_height="@dimen/confirmbooking_button_height"
                android:minHeight="48dp"
                android:paddingLeft="@dimen/confirmbooking_button_internalpadding"
                android:paddingRight="@dimen/confirmbooking_button_internalpadding"
                android:paddingStart="@dimen/confirmbooking_button_internalpadding"
                android:paddingEnd="@dimen/confirmbooking_button_internalpadding"
                android:text="@string/confirmbooking_button_yes"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="@dimen/confirmbooking_button_margin"
                android:layout_marginRight="@dimen/confirmbooking_button_margin"
                 />
            <Button
                android:id="@+id/confirmbooking_no"
                android:layout_width="@dimen/confirmbooking_button_width"
                android:layout_height="@dimen/confirmbooking_button_height"
                android:minHeight="48dp"
                android:paddingLeft="@dimen/confirmbooking_button_internalpadding"
                android:paddingRight="@dimen/confirmbooking_button_internalpadding"
                android:paddingStart="@dimen/confirmbooking_button_internalpadding"
                android:paddingEnd="@dimen/confirmbooking_button_internalpadding"
                android:text="@string/confirmbooking_button_no"
                android:background="@color/confirmbooking_button_no"
                android:layout_marginEnd="@dimen/confirmbooking_button_margin"
                android:layout_marginRight="@dimen/confirmbooking_button_margin"
                />
        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>